configure for xml