@@ -1,5 +1,5 @@
 package com.financetracker.transaction;
-import org.openapitools.api.TransactionsApi;
+import org.openapitools.api.TransactionApi;
 import org.openapitools.model.TransactionsGet200ResponseInner;
 import org.springframework.stereotype.Component;
 
@@ -7,16 +7,19 @@ import java.util.Collections;
 import java.util.List;
 
 @Component
-public class TransactionResource implements TransactionsApi {
+public class TransactionResource implements TransactionApi {
+
 
     @Override
     public List<TransactionsGet200ResponseInner> transactionsGet() {
-        return Collections.emptyList();
+        final var x = new TransactionsGet200ResponseInner();
+        x.setDescription("Hallo");
+        return List.of(x);
     }
 
     @Override
-    public void transactionsIdDelete(String id) {
-
+    public TransactionsGet200ResponseInner transactionsIdDelete(String id) {
+        return null;
     }
 
     @Override
@@ -25,12 +28,12 @@ public class TransactionResource implements TransactionsApi {
     }
 
     @Override
-    public void transactionsIdPatch(String id, TransactionsGet200ResponseInner transactionsGet200ResponseInner) {
-
+    public TransactionsGet200ResponseInner transactionsIdPatch(String id, TransactionsGet200ResponseInner transactionsGet200ResponseInner) {
+        return null;
     }
 
     @Override
-    public void transactionsPost(TransactionsGet200ResponseInner transactionsGet200ResponseInner) {
-
+    public TransactionsGet200ResponseInner transactionsPost(TransactionsGet200ResponseInner transactionsGet200ResponseInner) {
+        return null;
     }
 }
